:bug: Add truffle-runtime to restheart.
See https://www.graalvm.org/latest/reference-manual/embed-languages/#switching-to-the-fallback-engine